Remove MaxPermSize option
OpenJDK 11 is telling me this option is gone now, and is ignored. Might
as well remove it, I figure!

(This stack overflow answer suggests there is no sensible replacement
option because the functioning of the garbage collector has changed:
https://stackoverflow.com/a/12114284)